# PlateYOLO-JP-Prototype

./: .env.example  .gitignore  README.md  demo.py  demo_union_typed.py  main.py  pyproject.toml  requirements.txt  system_specification.md  util.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
weight/: EkMixer-128x128.onnx
