[project]
name = "plateyolo-jp-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx==1.18.0",
    "onnxruntime==1.18.0",
    "opencv-python-headless==4.11.0.86",
    "pillow==11.2.1",
    "numpy<2",
    "python-dotenv>=1.0.0",
]
